[update to 2.4.0] tcti-mssim: Fix potential buffer overflow in tcti_mssim_receive
Alexander Steffen (2):
      test: Skip esys-commit if ECDAA scheme is not supported
      test: Skip sapi-policy-authorizeNV if Encrypt/Decrypt command is missing

Andreas Fuchs (39):
      Tests: Remove unnecessary sleep
      TCTI: Make mssim (fake) async capable
      SYS: Fix page alignment errors
      ESYS: Set name of session objects
      ESYS: Add Esys_TRSess_GetAuthRequired
      Esys: Fix cov leak bug
      FAPI: Fix cov dead codes
      FAPI: Fix cov misc errors
      FAPI: fix cov null pointer bugs
      FAPI: Fix cov bounds bugs
      FAPI: Fix cov leak bugs
      esys: test: Add ESYS test for sessions in StartAuthSession()
      Tests/ESYS: Move ChangeEPS to destructive
      Test/FAPI: Add policy action test
      FAPI: Fix leak in PolicyAction
      FAPI: Add doxygen and inline comments to code for better navigation.
      FAPI: Remove dead and duplicate code
      FAPI: Fix NULL-dereferencing and use-after-free bugs
      FAPI: NvExtend add check for dataSize > 1024
      FAPI: Fix comment and log spelling errors
      FAPI: Turn event data into JSON
      Test/FAPI: Enable test for policyCpHash
      Test/FAPI: Add test for PolicyAuthorize Callback
      FAPI: Remove dead code
      Test/FAPI: Add test for Fapi_GetPollHandles()
      Test/FAPI: Add test for policyRef in policyAuthorize
      FAPI: Fix and test hierarchy policies
      FAPI: Fix and test config-ekcert
      TCTI: tcti-device make non-async mode allways block
      FAPI: Fix coding style problems
      FAPI: Refactor TPMS_POLICY_HARNESS to TPMS_POLICY
      FAPI: Fix PolicyAuthorize callback
      FAPI: Fix and test PolicyOr
      Test/FAPI: Test chained PolicyAuthorize
      Test/FAPI: Fix documentations
      ESYS: Remove duplicate entry from map file
      Test/FAPI: Document tested policies
      FAPI: Remove dead structs, fields and declarations
      FAPI: Add root cas of Intel, STM and NTC

Cod

--- a/options.conf
+++ b/options.conf
@@ -1,9 +1,10 @@
 [package]
 name = tpm2-tss
-url = https://github.com/tpm2-software/tpm2-tss/archive/2.3.3/tpm2-tss-2.3.3.tar.gz
+url = https://github.com/tpm2-software/tpm2-tss/archive/2.4.0/tpm2-tss-2.4.0.tar.gz
 archives = 
 giturl = https://github.com/tpm2-software/tpm2-tss.git
 domain = 
+alias = 
 
 [autospec]
 # build 32 bit libraries
