--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = tpm2-tss
-url = https://github.com/tpm2-software/tpm2-tss/archive/3.1.0/tpm2-tss-3.1.0.tar.gz
+url = https://github.com/tpm2-software/tpm2-tss/archive/3.2.0/tpm2-tss-3.2.0.tar.gz
 archives = 
 giturl = https://github.com/tpm2-software/tpm2-tss.git
 domain = 
@@ -47,6 +47,8 @@ optimize_size = false
 pgo = false
 # set flags for security-sensitive builds
 security_sensitive = false
+# package is only used by servers
+server = false
 # do not run test suite
 skip_tests = false
 # add .so files to the lib package instead of dev
